--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "lodash.toarray": "^4.4.0",
+    "oidc-client-ts": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-oidc-context": "^2.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
