--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.188",
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
+    "lodash": "^4.17.21",
     "lodash.toarray": "^4.4.0",
     "oidc-client-ts": "^2.1.0",
     "react": "^18.2.0",
